1.0.0+

1.0.0   2015-04-13:
    revert desktop dialogs pop to top #424 bba93a50 dlgs on wrong desktop
    update translations cs de ja pl pt_BR ru sv tr 
    add transparent background option [BwackNinja]
    fix Attempt to unlock mutex that was not locked startup error #468
    fixed 'Invalid cross-device link' when renaming aufs dirs
    configure option --disable-desktop-integration hides Prefs|Desktop tab #448
    fixed problem in command-line option --show-pref=N not showing Advanced tab
    add configure option --with-bash-path #452
    new transifex slug
    add Device Protocol File Archive handlers
    add default handlers: ftp ssh mtp gphoto/ptp ifuse fusesmb
    add video thumbnails via ffmpegthumbnailer
    add configure option --disable-video-thumbnails
    add change detection blacklist
    add mount and unmount run-task socket commands
    new maximum Small and Large icon sizes to 256x256
    new View|Style|Large Icons options for Detailed/Compact #478 #480
    Show|Display Name %n devnum
    open block device on command line eg spacefm /dev/sdd1
    allow bookmark block devices
    removed File|Save Session
    [GTK2] select next file after delete/rename current #411
    detect subdir mount
    fix evt_device not executed if Devices pane unshown
    fix GLib-CRITICAL source ID not found warning on file prop close
    improve output dlg scroll on error
    design menu fix show edit commands for submenus
    fix design menu confirm remove submenu ignores no
    fix Source ID not found warning in vfs_thumbnail_loader_free
0.9.4   2014-03-30:
    improve inotify error messages
    configure.ac default make options; fix -Wformat-security warning #416
    adjust new window maximized panel sizes #420
    fix toolbar checkbox item properties icon insensitive #418
    fix panel_sliders-key used as task height 0.9.2-0.9.3 #419
    reset Use-as-opener on import/install plugin; update man
    task error continue no present open task dialog